CHANGES.txt for Gem Drop Deluxe

August 12, 2015
 * Increased max-kills to 110 (# of possible blocks on
   the screen; not that you'd EVER get a full screen of
   the same block)
 * Font header file generation part of build process.
 * Using #defines for piece picking & matching.
 * Using #defines for keycodes.
 * Using #define'd bits for SDMCTL settings.
 * Fixed likely bug in original game's high score tracking
   (affecting scores over 10,000 points).
 * Using #define'd pointer to OS ROM font (during "UH OH" sequence)
 * Erase pieces right after throwing them, so they don't stay
   next to your character while the cascade effect takes place.

July 18, 2015
 * Requiring cc65_atari8bit_extended_headers as an
   installed set of .h files in incldue path
   (vs. hack of using a symlink to them)

July 17, 2015
 * Initial github import; ported mostly to C for cc65
   + Converted FNT files to a #include'able gemdrop-font.h.
   + Converted ACT source files into a single gemdrop.c file.

September 1997
 * Initial release
   Written in Action!
